feat: add get question details function
