# internal/app/api/question_api.go
@@ -50,3 +50,33 @@ func QuestionList(c *gin.Context) {
 
 	service.QuestionList(c, page, number, searchTitle, searchTag, searchDegree, order)
 }
+
+// GetQuestionMsg @Summary 查看题目接口
+// @Description 查看题目详情
+// @Param id query int true "get question message"
+// @Accept       json
+// @Produce      json
+// @Success      200  {object}  error.ResponseNormal
+// @Router       /question/get_question_msg [get]
+func GetQuestionMsg(c *gin.Context) {
+	id, _ := strconv.Atoi(c.Query("id"))
+
+	service.GetQuestionMsg(c, id)
+}
+
+// CommitAnswer @Summary 查看题目接口
+// @Description 查看题目详情
+// @Param answer body schema.Answer true "commit your answer of question"
+// @Accept       json
+// @Produce      json
+// @Success      200  {object}  error.ResponseNormal
+// @Router       /question/commit_answer [post]
+func CommitAnswer(c *gin.Context) {
+	var sa schema.Answer
+	if err := c.ShouldBindJSON(&sa); err != nil {
+		error.Response(c, error.BadRequest, gin.H{}, "输入内容有误！")
+		return
+	}
+
+	service.CommitAnswer(c, sa)
+}
